grammar.js
    source_file: ($) => repeat($._components),

    _components: ($) =>
      choice(
        $._namespace_def,
        $._enum_def,
        $._function_def,
        $._entity_def,
        $._statement,
      ),

    //TODO: Are there function declarations?
    identifier: ($) => seq(optional("ref"), /[$]?[_a-zA-Z][_a-zA-Z0-9]*/),
    entity_id: ($) => alias($.identifier, $.entity_id),
    boolean_lit: ($) => choice("true", "false"),
    num_lit: ($) =>
      choice(
        /[+]?[0-9]*[nN]/,
        /[+-]?[0-9]*[iI]/,
        /[+-]?[0-9]\.[0-9]f/,
        /[+-]?[0-9]\.0d|[+-]?[0-9]\.[0-9]*0+d{2}/,
        /-?[0-9]+\/[1-9][0-9]*R/,
        /[+-]?[0-9]+(?:\.[0-9]+)?lat[+-]?[0-9]+(?:\.[0-9]+)?long/,
        /[+-]?[0-9]+(?:\.[0-9]+)?[+-]?[0-9]+(?:\.[0-9]+)?j/,
      ),
    string: ($) => /"(?:[^%"\\]|%.)*"/u,
    cstring: ($) => /'(?:[ !-$/&-\[\]-~]|%.)*'/,
  },
});
